// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alignment renders correctly for a center aligned container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .c0 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c0 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c0 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`alignment renders correctly for a left aligned container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-right: auto;
}

@media (max-width:1568px) {
  .c0 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c0 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c0 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`alignment renders correctly for a right aligned container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
}

@media (max-width:1568px) {
  .c0 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c0 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c0 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`fixed width renders correctly when breakpoint is desktop 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c0 {
  max-width: 1024px;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`fixed width renders correctly when breakpoint is fullHD 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c0 {
  max-width: 1440px;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`fixed width renders correctly when breakpoint is mobile 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c0 {
  max-width: 480px;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`fixed width renders correctly when breakpoint is tablet 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c0 {
  max-width: 768px;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`fixed width renders correctly when breakpoint is widescreen 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

.c0 {
  max-width: 1200px;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`fluid renders correctly for a fluid container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  margin: 0 2rem;
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`layout renders correctly for a layout container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:768px) {
  .c0 {
    margin: 0 1rem;
  }
}

@media (max-width:1568px) {
  .c0 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c0 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c0 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  test
</div>
`;

exports[`renders correctly for a basic container 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .c0 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .c0 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .c0 {
    max-width: 768px;
  }
}

<div
  class="c0 c1"
>
  test
</div>
`;
